fix overlap

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -6,6 +6,7 @@
   padding: 10px 0;
   height: 100vh;
   background-size: cover;
+  position: relative;
 }
 
 .home-container {
@@ -19,6 +20,7 @@
 .home-header {
   text-align: center;
   z-index: 10;
+  position: relative;
   margin-top: 40px;
 }
 
@@ -70,7 +72,7 @@
 .cherub-right {
   top: 4rem;
   right: 3rem;
-  z-index: 100;
+  z-index: 0;
 }
 
 @media (max-width: 1100px) {
